GamesSalesAnalysis project is updated

--- a/1-GamesSalesAnalysis/GamesSalesAnalysis.html
+++ b/1-GamesSalesAnalysis/GamesSalesAnalysis.html
@@ -14999,9 +14999,9 @@ memory usage: 1.4+ MB
 8.2     282
 8.3     254
        ... 
-0.7       2
-1.1       2
+1.3       2
 9.6       2
+0.7       2
 0         1
 9.7       1
 Name: user_score, Length: 96, dtype: int64</pre>
@@ -15260,9 +15260,9 @@ memory usage: 1.4+ MB
 8.3    254
 8.5    253
       ... 
-0.7      2
-0.5      2
+1.3      2
 9.6      2
+0.7      2
 0        1
 9.7      1
 Name: user_score, Length: 95, dtype: int64</pre>
@@ -15406,74 +15406,74 @@ memory usage: 1.4+ MB
   </thead>
   <tbody>
     <tr>
-      <th>3081</th>
-      <td>LEGO Harry Potter: Years 5-7</td>
-      <td>DS</td>
-      <td>NaN</td>
-      <td>Action</td>
-      <td>0.34</td>
-      <td>0.25</td>
-      <td>0.00</td>
-      <td>0.07</td>
-      <td>69.0</td>
-      <td>NaN</td>
-      <td>E10+</td>
-    </tr>
-    <tr>
-      <th>4270</th>
-      <td>Brothers In Arms: D-Day</td>
-      <td>PSP</td>
-      <td>2006.0</td>
-      <td>Shooter</td>
-      <td>0.23</td>
-      <td>0.14</td>
-      <td>0.00</td>
-      <td>0.09</td>
-      <td>65.0</td>
-      <td>9.1</td>
-      <td>M</td>
-    </tr>
-    <tr>
-      <th>10130</th>
-      <td>BlazBlue: Calamity Trigger Portable</td>
+      <th>5956</th>
+      <td>Kurohyou: Ryu ga Gotoku Shinshou</td>
       <td>PSP</td>
       <td>2010.0</td>
-      <td>Fighting</td>
-      <td>0.07</td>
-      <td>0.01</td>
-      <td>0.03</td>
-      <td>0.01</td>
-      <td>82.0</td>
-      <td>7.8</td>
-      <td>T</td>
+      <td>Adventure</td>
+      <td>0.00</td>
+      <td>0.00</td>
+      <td>0.29</td>
+      <td>0.00</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
-      <th>10547</th>
-      <td>Creeper World 3: Arc Eternal</td>
-      <td>Wii</td>
-      <td>2009.0</td>
+      <th>14142</th>
+      <td>FabStyle</td>
+      <td>3DS</td>
+      <td>2011.0</td>
       <td>Strategy</td>
       <td>0.00</td>
       <td>0.00</td>
-      <td>0.10</td>
+      <td>0.03</td>
       <td>0.00</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
     </tr>
     <tr>
-      <th>15623</th>
-      <td>Winter Blast: 9 Snow &amp; Ice Games</td>
-      <td>Wii</td>
-      <td>2010.0</td>
-      <td>Sports</td>
+      <th>15986</th>
+      <td>Hiiro no Kakera Portable</td>
+      <td>PSP</td>
+      <td>2008.0</td>
+      <td>Adventure</td>
+      <td>0.00</td>
+      <td>0.00</td>
       <td>0.02</td>
       <td>0.00</td>
+      <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <th>14185</th>
+      <td>Need for Speed (2015)</td>
+      <td>PC</td>
+      <td>2016.0</td>
+      <td>Racing</td>
+      <td>0.00</td>
+      <td>0.03</td>
       <td>0.00</td>
       <td>0.00</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+    </tr>
+    <tr>
+      <th>6731</th>
+      <td>SBK Superbike World Championship</td>
+      <td>PS3</td>
+      <td>2008.0</td>
+      <td>Racing</td>
+      <td>0.12</td>
+      <td>0.11</td>
+      <td>0.00</td>
+      <td>0.02</td>
+      <td>59.0</td>
+      <td>6.1</td>
+      <td>E10+</td>
     </tr>
   </tbody>
 </table>
@@ -18674,17 +18674,6 @@ height=971
 
 </div>
 
-</div>
-<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div class="alert alert-success">
-<b>Комментарий ревьюера:</b>
-
-В том числе мы можем посчитать корреляцию между нужными нам переменными и использовать метод `heatmap` из библиотеки `seaborn` для визуализации тепловой карты. 
-
-
-</div>
-</div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
