--- a/1-GamesSalesAnalysis/GamesSalesAnalysis.html
+++ b/1-GamesSalesAnalysis/GamesSalesAnalysis.html
@@ -14372,7 +14372,7 @@ a.anchor-link {
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[2]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># workaround to use praktikum file system as well as local windows system\n&quot;,</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># workaround to use praktikum file system as well as local windows system&quot;,</span>
 <span class="k">try</span><span class="p">:</span>
     <span class="n">games</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="s2">&quot;/datasets/games.csv&quot;</span><span class="p">)</span>
 <span class="k">except</span><span class="p">:</span>
