--- a/3-ABtestingAnalysis/ABtestingAnalysis.html
+++ b/3-ABtestingAnalysis/ABtestingAnalysis.html
@@ -17491,8 +17491,10 @@ height=222
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[55]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">orders_users_a</span> <span class="o">=</span> <span class="n">orders</span><span class="p">[</span><span class="n">orders</span><span class="p">[</span><span class="s1">&#39;group&#39;</span><span class="p">]</span><span class="o">==</span><span class="s1">&#39;A&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s1">&#39;visitorId&#39;</span><span class="p">)[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">nunique</span><span class="p">()</span><span class="o">.</span><span class="n">reset_index</span><span class="p">()</span>
-<span class="n">orders_users_b</span> <span class="o">=</span> <span class="n">orders</span><span class="p">[</span><span class="n">orders</span><span class="p">[</span><span class="s1">&#39;group&#39;</span><span class="p">]</span><span class="o">==</span><span class="s1">&#39;B&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s1">&#39;visitorId&#39;</span><span class="p">)[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">nunique</span><span class="p">()</span><span class="o">.</span><span class="n">reset_index</span><span class="p">()</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">orders_users_a</span> <span class="o">=</span> <span class="n">orders</span><span class="p">[</span><span class="n">orders</span><span class="p">[</span><span class="s1">&#39;group&#39;</span><span class="p">]</span><span class="o">==</span><span class="s1">&#39;A&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s1">&#39;visitorId&#39;</span><span class="p">)[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">]</span> \
+                                            <span class="o">.</span><span class="n">nunique</span><span class="p">()</span><span class="o">.</span><span class="n">reset_index</span><span class="p">()</span>
+<span class="n">orders_users_b</span> <span class="o">=</span> <span class="n">orders</span><span class="p">[</span><span class="n">orders</span><span class="p">[</span><span class="s1">&#39;group&#39;</span><span class="p">]</span><span class="o">==</span><span class="s1">&#39;B&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="s1">&#39;visitorId&#39;</span><span class="p">)[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">]</span> \
+                                            <span class="o">.</span><span class="n">nunique</span><span class="p">()</span><span class="o">.</span><span class="n">reset_index</span><span class="p">()</span>
 </pre></div>
 
      </div>
@@ -18933,7 +18935,9 @@ Name: revenue, dtype: int64</pre>
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[89]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">users_many_orders</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">concat</span><span class="p">([</span><span class="n">orders_users_a</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="s1">&#39;transactionId &gt; 2&#39;</span><span class="p">)[</span><span class="s1">&#39;visitorId&#39;</span><span class="p">],</span> <span class="n">orders_users_b</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="s1">&#39;transactionId &gt; 2&#39;</span><span class="p">)[</span><span class="s1">&#39;visitorId&#39;</span><span class="p">]],</span> <span class="n">axis</span><span class="o">=</span><span class="mi">0</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">users_many_orders</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">concat</span><span class="p">([</span><span class="n">orders_users_a</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="s1">&#39;transactionId &gt; 2&#39;</span><span class="p">)[</span><span class="s1">&#39;visitorId&#39;</span><span class="p">],</span>
+                               <span class="n">orders_users_b</span><span class="o">.</span><span class="n">query</span><span class="p">(</span><span class="s1">&#39;transactionId &gt; 2&#39;</span><span class="p">)[</span><span class="s1">&#39;visitorId&#39;</span><span class="p">]],</span>
+                                <span class="n">axis</span><span class="o">=</span><span class="mi">0</span><span class="p">)</span>
 </pre></div>
 
      </div>
@@ -19180,7 +19184,8 @@ Name: visitorId, dtype: int64</pre>
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[98]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">zeros_a_filtered</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="n">index</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">arange</span><span class="p">(</span><span class="n">visitors_a</span> <span class="o">-</span> <span class="nb">len</span><span class="p">(</span><span class="n">orders_users_a_filtered</span><span class="p">[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">])),</span> <span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">])</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">zeros_a_filtered</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="n">index</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">arange</span><span class="p">(</span><span class="n">visitors_a</span> <span class="o">-</span> <span class="nb">len</span><span class="p">(</span><span class="n">orders_users_a_filtered</span><span class="p">[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">])),</span>
+                                <span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">])</span>
 </pre></div>
 
      </div>
@@ -19194,7 +19199,8 @@ Name: visitorId, dtype: int64</pre>
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[99]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">zeros_b_filtered</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="n">index</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">arange</span><span class="p">(</span><span class="n">visitors_b</span> <span class="o">-</span> <span class="nb">len</span><span class="p">(</span><span class="n">orders_users_b_filtered</span><span class="p">[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">])),</span> <span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">])</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">zeros_b_filtered</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="n">index</span><span class="o">=</span><span class="n">np</span><span class="o">.</span><span class="n">arange</span><span class="p">(</span><span class="n">visitors_b</span> <span class="o">-</span> <span class="nb">len</span><span class="p">(</span><span class="n">orders_users_b_filtered</span><span class="p">[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">])),</span>
+                                <span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;transactionId&#39;</span><span class="p">])</span>
 </pre></div>
 
      </div>
@@ -19687,20 +19693,6 @@ height=365
 <p>Как видно по графику и общей выручке за месяц, несмотря на незначительную разницу в средних чеках, увеличенная конверсия сегмента В дала большой прирост в общей выручке за время А/В теста. <strong>В сумме сегмент В заработал почти на 400 тыс. больше (14%), чем сегмент А</strong>. Этот факт позволяет заявить об успешности А/В теста и выигрыше группы В по основной целе исследования, направленной на увеличение общей выручки.</p>
 
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
-<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
-     <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span> 
-</pre></div>
-
-     </div>
-</div>
-</div>
-</div>
-
 </div>
 </body>
 
